# knetminer-etl

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml  run-tests.sh
.github/: dependabot.yml
.github/workflows/: standard-build.yml
ci-build-v2/python-poetry/: build.sh
dist-resources/: test.sh
doc/: README.md
src/examples/ensembl/: config.yml  workflow.snakefile
src/examples/ensembl/rres/: env.sh  setup.sbatch
src/ketl/: __init__.py  config.py  core.py  helpers.py  io.py  spark_utils.py  tabmap.py
src/ketl/examples/ensembl/: wf_config.py
src/ketl/io/: __init__.py  core.py  neoloader.py
src/ketl/mappings/: knetminer.py
src/ketl/spark/: helloapp.py  utils.py
src/ketl/tabmap/: core.py  helpers.py
src/scripts/: ketl-deploy.sh
src/scripts/neo4j-utils/: kneo-docker-run.sh  kslurm-neo-start.sbatch  kslurm-neo-start.sh  kslurm-neo-stop.sh
src/scripts/neo4j-utils/slurm/: kslurm-neo-start.sbatch  kslurm-neo-start.sh  kslurm-neo-stop.sh
src/scripts/spark-utils/: hello-spark.py  kspark-local-run.sh
src/scripts/spark-utils/slurm/: kslurm-spark-start.sbatch  kslurm-spark-start.sh  kslurm-spark-stop.sh
src/scripts/spark-utils/slurm-server/: kslurm-hello-spark.py  kslurm-spark-start.sbatch  kslurm-spark-start.sh  kslurm-spark-stop.sh  spark-start.sbatch  spark-start.sh  spark-stop.sh
tests/: __init__.py  conftest.py  test_io.py  test_ketl.py  test_neoloader.py  test_snake_tabmap.py  test_spark_utils.py  test_tabmap.py
tests/ketl/: test_config.py  test_core.py  test_ketl.py
tests/ketl/io/: test_io.py
tests/ketl/io/neoloader/: test_neoloader.py  test_neoloader_config.py
tests/ketl/mappings/: test_knet_mappings.py
tests/ketl/snake/: test_real_case.py  test_snake_tabmap.py
tests/ketl/spark/utils/: test_spark_utils.py
tests/ketl/tabmap/: sample_config.py  test_tabmap.py  test_tabmap_core.py  test_tabmap_helpers.py
tests/ketl/test/: snake.py  utils.py
tests/ketltest/: snake.py  utils.py
tests/resources/: logging-test.yml  tabmap-test.snakefile  test-config.yml  test-proteins.tsv  test_genes.tsv
tests/resources/ensembl/: wf_config.py  wf_mapping.py
tests/resources/ensembl/local/: run.sh
tests/resources/ensembl/rres/: README.md  cmd.sh  env.sh  run.sbatch  setup.sbatch  teardown.sbatch
tests/resources/real_test_case/: config.yml  ensmbl-uniprot-genes.tsv  wf_config.py  wf_mapping.py  workflow.snakefile
