[project]
name = "knetminer-etl"
version = "0.1.0"
description = "KnetMiner ETL tools for Knowledge Graph building"
authors = [
    {name = "Marco Brandizi",email = "marco.brandizi@gmail.com"}
]
readme = "README.md"
requires-python = "^3.14"

dependencies = [
    "pyspark (>=4.0.1,<5.0.0)",
    "py4j (>=0.10.9.9,<0.11.0.0)", # TODO: remove? Isn't implied by pyspark?
    "brandizpyes (>=1.1.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  {include = "ketl", from = "src"}
]

[dependency-groups]
dev = [
    "pandas (>=2.3.3,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "assertpy (>=1.1,<2.0)",
    "autoflake (>=2.3.1,<3.0.0)",
    "isort (>=7.0.0,<8.0.0)",
]

[tool.pytest.ini_options]
addopts = [ "-v" ]

# Not needed, we have out own logger setup in conftest.py
# Use pytest --capture=no to see logs on the console and printed diagnostics
# In particular, use it if the logging helper doesn't seem to work (might not find the config file)
# log_cli = true
# log_level = "DEBUG"
# log_file = "test.log"
