[project]
name = "knetminer-etl"
version = "1.0.0"
description = "KnetMiner ETL tools for Knowledge Graph building"
authors = [
    {name = "Marco Brandizi",email = "marco.brandizi@gmail.com"}
]
readme = "README.md"
# Brandizi: I mostly develop with 3.14, but we need compatibility with other contexts, eg, 
# RRes SLURM.
requires-python = ">=3.12,<4.0"

dependencies = [
    "pyspark (>=4.0.1,<5.0.0)",
    "brandizpyes (>=2.0.0,<3.0.0)",
    "neo4j (>=6.1.0,<7.0.0)",
    "tenacity (>=9.1.4,<10.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  {include = "ketl", from = "src"}
]

[dependency-groups]
dev = [
    "pandas (>=2.3.3,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "assertpy (>=1.1,<2.0)",
    # autoflake and isort are useful when you want to clean up the code
    # Currently, there is no automation in this project to do so, since I prefer to do it manually
    # from time to time.
    "autoflake (>=2.3.1,<3.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "snakemake (>=9.23.1,<10.0.0)",
    "testcontainers[neo4j] (>=4.14.1,<5.0.0)",
    # Allows for: poetry run deptry . and check for unused deps or other dep issues.
    "deptry (>=0.25.1,<0.26.0)",
    "deepdiff (>=9.0.0,<10.0.0)",
]

[tool.pytest.ini_options]
addopts = [ "-v" ]
markers = [
    "integration: integration tests (use -m '[not] integration')"
]
pythonpath = [ "tests" ] # to import helpers like ketltest.utils
# Skips warning from 3rd party libs, such as rdflib
filterwarnings = [
  "once",
  "ignore",
  "default::Warning:ketl\\..*",
  "default::Warning:test_\\..*"
]


[tool.poetry.scripts]
# Utilities to start/stop a Spark cluster on SLURM.
# Unfortunately, wildcards aren't supported, you can build this list with:
#
# l=$(find src/scripts -type f)
# for p in $l; do n=$(basename $p); echo "\"$n\" = { reference = \"$p\", type = \"file\"}"; done
#
"kslurm-neo-start.sbatch" = { reference = "src/scripts/neo4j-utils/slurm/kslurm-neo-start.sbatch", type = "file"}
"kslurm-neo-stop.sh" = { reference = "src/scripts/neo4j-utils/slurm/kslurm-neo-stop.sh", type = "file"}
"kslurm-neo-start.sh" = { reference = "src/scripts/neo4j-utils/slurm/kslurm-neo-start.sh", type = "file"}
"hello-spark.py" = { reference = "src/scripts/spark-utils/hello-spark.py", type = "file"}
"kslurm-spark-start.sbatch" = { reference = "src/scripts/spark-utils/slurm/kslurm-spark-start.sbatch", type = "file"}
"kslurm-spark-stop.sh" = { reference = "src/scripts/spark-utils/slurm/kslurm-spark-stop.sh", type = "file"}
"kslurm-spark-start.sh" = { reference = "src/scripts/spark-utils/slurm/kslurm-spark-start.sh", type = "file"}


# Not needed, we have our own logger setup in conftest.py
# Use pytest --capture=no to see logs on the console and printed diagnostics
# In particular, use it if the logging helper doesn't seem to work (might not find the config file)
# log_cli = true
# log_level = "DEBUG"
# log_file = "test.log"
